Fixed incorrect alignment on smaller devices

--- a/frontend/components/features/Features.module.scss
+++ b/frontend/components/features/Features.module.scss
@@ -165,6 +165,9 @@
     }
 }
 @media (max-width: 500px) {
+    .main {
+        padding-top: 20px !important;
+    }
     .header {
         --section-padding: 20px !important;
 
